data/derived/fa15/progs/unify/prog2165.ml.out
Characters 86-87:
  in wwhile(gs, b);;
                ^
Error: This expression has type bool but an expression was expected of type
         int
